--- a/index.html
+++ b/index.html
@@ -20,38 +20,61 @@
 <body>
 
     <header>
-        <div class="wrap">
-            <div class="row">
-                <div class="logo left col2">
-                    <a href="index.html"><span class="b1">w</span><span class="b2">h</span><span class="b3">i</span><span class="b4">t</span><span class="b5">e</span></a>
+        <div class="menu-block row">
+            <div class="container">
+                <div class="logo left">
+                    <a href="index.html">
+                        <span>W</span>
+                        <span>H</span>
+                        <span>I</span>
+                        <span>T</span>
+                        <span>E</span>
+                    </a>
                 </div>
-                <div class="nav col8 left">
-                    <nav class="navmenu center right">
+                <a href="" class="menu_toggler">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </a>
+                <div id="search-form" class="right">
+                    <form action="">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                        <input type="text" placeholder="Search">
+                    </form>
+                </div>
+                <div class="right">
+                    <nav class="navMenu">
                         <ul>
-                            <li class="first active scroll_btn"><a href="#s1">Home</a></li>
-                            <li class="scroll_btn"><a href="#s2">About Us</a></li>
-                            <li class="scroll_btn"><a href="#s5">Projects</a></li>
-                            <li class="scroll_btn"><a href="#s6">Team</a></li>
-                            <li class="scroll_btn"><a href="#s7">News</a></li>
-                            <li class="scroll_btn last"><a href="#s8">Contacts</a></li>
-                            <li class="scroll_btn">
-                                <a>Pages</a>
+                            <li name="home" onclick="clickMe(this)"><a>HOME</a></li>
+                            <li name="about" onclick="clickMe(this)"><a>ABOUT US</a></li>
+                            <li class="zero">
+                                <a></a>
+                            </li>
+                            <li class="zero">
+                                <a></a>
+                            </li>
+                            <li name="works" onclick="clickMe(this)"><a>PROJECTS</a></li>
+                            <li class="zero">
+                                <a></a>
+                            </li>
+                            <li name="team" onclick="clickMe(this)"><a>TEAM</a></li>
+                            <li name="status" onclick="clickMe(this)"><a>NEWS</a></li>
+                            <li class="zero">
+                                <a></a>
+                            </li>
+                            <li name="contacts" onclick="clickMe(this)"><a>CONTACTS</a></li>
+                            <li name="pages" onclick="clickMe(this)" class="li-sub">
+                                <a>PAGES</a>
+                                <ul class="pages-ul">
+                                    <li><a href="">BLOG</a></li>
+                                    <li><a href="">BLOG POST</a></li>
+                                    <li><a href="">PORTFOLIO SINGLE WORK</a></li>
+                                </ul>
                             </li>
                         </ul>
                     </nav>
                 </div>
-                <div class="accordion">
-                    <i class="fa fa-bars" aria-hidden="true"></i>
-                </div>
-                <div id="search-form" class="right col1">
-                    <form method="get" action="#">
-                        <input type="text" name="Search" value="Search" onFocus="if (this.value == 'Search') this.value = '';" onBlur="if (this.value == '') this.value = 'Search';" />
-                    </form>
-                </div>
             </div>
         </div>
     </header>
-
     <!--================ section 1 ======================-->
 
     <section id="s1" class="col12">
@@ -79,8 +102,8 @@
                             <div class="imgs col2 image-2" style="background-image: url(img/slide2_bg.jpg)"></div>
                             <div class="imgs col2 image-3" style="background-image: url(img/slide3_bg.jpg)"></div>
                         </div>
-                        <a href="">
-                            <div class="col2 button button-read  right">Read More <i class="fa fa-chevron-right" aria-hidden="true"> </i></div>
+                        <a>
+                            <div class="col2 button button-read  right">Read More <i class="fa fa-chevron-right"> </i></div>
                         </a>
                     </div>
                 </div>
@@ -438,6 +461,7 @@
             </div>
         </div>
     </section>
-<script type="text/javascript" src='js/script.js'></script>
+    <script type="text/javascript" src='js/script.js'></script>
 </body>
+
 </html>
